# RTS-Agents

./: .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  README.md  UPDATES.md  eslint.config.js  headless.js  index.html  jest.config.js  main.js  package-lock.json  package.json  playwright.config.js  preload.js  tailwind.config.js  tsconfig.json  verify_agent_page.py  verify_settings.py  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: DESIGN.md  FRONTEND.md  HARNESS.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  electron-ipc.md  index.md  provider-integration.md
mobile-webapp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
scripts/: build-dist.js  dev-server.js  provider-smoke.js  validate-architecture.js  validate-docs.js
src/: input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  cloudflare.rs  github.rs  jira.rs  mod.rs  projects.rs  settings.rs  tasks.rs  utils.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: claude.rs  cloudflare_kv.rs  codex.rs  config_store.rs  cursor.rs  gemini.rs  github.rs  jira.rs  jules.rs  mod.rs  project.rs
src-tauri/src/utils/: http.rs  mod.rs  process.rs
styles/: output.css
tests/: test_notification.py
verification/: verify_badges.py  verify_modal.py  verify_pull_requests.py  verify_settings.py  verify_settings_buttons.py  verify_settings_final.py
(+204 files in other folders)
